# fedik

./: Cargo.toml  LICENSE  README.md  deny.toml
src/: font.rs  main.rs  widgets.rs
