[package]
name = "fedik"
version = "0.3.1"
edition = "2024"
license = "MIT"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
crossterm = "0.29.0"
anyhow = "1.0"
tokio = { version = "1.51", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
